--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "project-a-gg",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,14 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "i18next": "^23.12.2",
-    "i18next-browser-languagedetector": "^8.0.0",
     "react": "^18.3.1",
-    "react-calendly": "^4.3.1",
-    "react-dom": "^18.3.1",
-    "react-helmet-async": "^2.0.5",
-    "react-i18next": "^15.0.0",
-    "react-router-dom": "^6.25.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -25,14 +19,9 @@
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "init": "^0.1.2",
-    "npx": "^10.2.2",
-    "postcss": "^8.4.40",
-    "tailwindcss": "^3.4.7",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   }
